# algorithms_for_inconsistency_measurement_in_PL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TO-DO_Ideas.md  main.cpp
lib/cadical/src/: reap.hpp
src/: CMakeLists.txt  Constants.h  ContensionASP.cpp  ContensionASP.h  ContensionEncodingMaxSAT.cpp  ContensionEncodingSAT.cpp  ForgettingBasedASP.cpp  ForgettingBasedASP.h  ForgettingBasedEncodingSAT.cpp  ForgettingBasedNaiveSAT.cpp  ForgettingBasedNaiveSAT.h  Formula.cpp  Formula.h  HitDistanceASP.cpp  HitDistanceASP.h  HitDistanceEncodingSAT.cpp  HittingSetASP.cpp  HittingSetASP.h  HittingSetEncodingSAT.cpp  InconsistencyMeasureASP.cpp  InconsistencyMeasureASP.h  InconsistencyMeasureMaxSAT.cpp  InconsistencyMeasureMaxSAT.h  InconsistencyMeasureNaiveSAT.cpp  InconsistencyMeasureNaiveSAT.h  InconsistencyMeasureSAT.cpp  InconsistencyMeasureSAT.h  Kb.cpp  Kb.h  LTLMeasuresASP.cpp  LTLMeasuresASP.h  MaxDistanceASP.cpp  MaxDistanceASP.h  MaxDistanceEncodingSAT.cpp  MvIterativeASP.cpp  MvIterativeASP.h  Parser.cpp  Parser.h  ProblematicIterativeASP.cpp  ProblematicIterativeASP.h  (+9 more)
